Linking gateway and auth-service