@@ -8,6 +8,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.web.server.authentication.ServerAuthenticationConverter;
 import org.springframework.stereotype.Component;
 import org.springframework.web.server.ServerWebExchange;
@@ -16,6 +17,7 @@ import reactor.core.publisher.Mono;
 import javax.crypto.SecretKey;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthorizationFilter implements ServerAuthenticationConverter {
@@ -42,9 +44,11 @@ public class JwtAuthorizationFilter implements ServerAuthenticationConverter {
                     .getBody();
 
             String username = claims.getSubject();
+            String role = claims.get("role", String.class);
 
-            if (username != null) {
-                return Mono.just(new UsernamePasswordAuthenticationToken(username, null, Collections.emptyList()));
+            if (username != null && role != null) {
+                SimpleGrantedAuthority authority = new SimpleGrantedAuthority(role);
+                return Mono.just(new UsernamePasswordAuthenticationToken(username, null, List.of(authority)));
             }
         } catch (Exception e) {
             return Mono.empty();
